--- a/MAIN.html
+++ b/MAIN.html
@@ -13,6 +13,6 @@
         <a href="https://scratch.mit.edu/projects/164510651/">Boost Engine</a>
         <a href="">Classic Engine</a> </div> </h1> 
     <h3><iframe allowtransparency="true" width="800" height="600" src="//scratch.mit.edu/projects/embed/134242598/?autostart=false" frameborder="0" allowfullscreen></iframe></h3> 
-    <h3><iframe allowtransparency="true" width="800" height="600" src="//scratch.mit.edu/projects/embed/164510651/?autostart=false" frameborder="0" allowfullscreen></iframe></h3> 
+    <h3><iframe allowtransparency="true" width="" height="600" src="//scratch.mit.edu/projects/embed/164510651/?autostart=false" frameborder="0" allowfullscreen></iframe></h3> 
 </body> 
 </html>
